<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">dbsigurd_notes</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ToDo">To do shown here</string>
    <string name="Button">Add</string>
    <string name="toDoHint">Enter a to do!</string>
    <string name="optionButton">&#8230;</string>
    <string name="title_activity_display_options">DisplayOptions</string>
    <string name="title_activity_options">Options</string>
    <string name="DeleteButton">Delete</string>
    <string name="CopyButton">Copy</string>
    <string name="EmailButton">Email</string>
    <string name="ArchiveButton">Archive</string>
    <string name="CancelButton">Cancel</string>
    <string name="massOptionButton">More options!</string>
    <string name="VAB">View Archives</string>
    <string name="title_activity_view_archive">ViewArchive</string>
    <string name="AVT">Archived To-Dos</string>
    <string name="Return">Return</string>
    <string name="ArchivedOptions">Options</string>
    <string name="title_activity_mass_options">MassOptions</string>
    <string name="massOptions">Options to edit mulitple to-dos!</string>
    <string name="deleteAllButton">Delete All</string>
    <string name="goBack">Unarchived</string>
    <string name="title_activity_archived_options">ArchivedOptions</string>
    <string name="UnarchiveButton">Unarchive</string>
    <string name="title_activity_archived__options">Archived_Options</string>
    <string name="title_activity_email">EmailActivity</string>
    <string name="title_activity_select_to_dos">SelectToDos</string>
    <string name="select">Select the to-dos to email</string>
    <string name="Done">Send email and return to main</string>

</resources>
