<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="views.MainActivity" >

    <ListView
        android:id="@+id/toDoListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/MassOptionsButton"
        android:layout_below="@+id/ToDoBox" >

    </ListView>

    <EditText
        android:id="@+id/ToDoBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/toDoListView"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/button"
        android:ems="10"
        android:hint="@string/toDoHint" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/toDoListView"
        android:layout_alignParentRight="true"
        android:onClick="sendMessage"
        android:background="@drawable/buttonshape"
        android:text="@string/Button" />

    <Button
        android:id="@+id/MassOptionsButton"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:onClick="openMassOptions"
        android:background="@drawable/buttonshape"
        
        android:text="@string/massOptionButton" />

    <Button
        android:id="@+id/ViewArchivedButton"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/toDoListView"
        android:onClick="archivedLauncher"
        android:background="@drawable/buttonshape"
        
        android:text="@string/VAB" />

</RelativeLayout>