<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.dbsigurd_mytodolist.ViewArchive" >

    <TextView
        android:id="@+id/ArchivedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/AVT"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ListView
        android:id="@+id/listView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ReturnButton"
        android:layout_below="@+id/ArchivedTextView"
        android:layout_centerHorizontal="true" >

    </ListView>

    <Button
        android:id="@+id/ReturnButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/listView1"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="19dp"
        android:text="@string/Return" />

    <Button
        android:id="@+id/ArchivedOptions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/listView1"
        android:layout_below="@+id/listView1"
        android:layout_marginRight="39dp"
        android:text="@string/ArchivedOptions" />

</RelativeLayout>
